<resources>
    <string name="app_name">Homework8</string>
    <string name="hearme">Listen to the best music everyday with <font color="#06c149">Hearme</font> now!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="let_s_you_in">Let\'s you in!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color="#06c149">Sign up</font></string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="or">or</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="get_started">Get Started</string>
</resources>