<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/img_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/let_s_you_in"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_facebook"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/urbanist_regular"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/continue_with_facebook"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_google"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/urbanist_regular"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/continue_with_google"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_apple"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/urbanist_regular"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/continue_with_apple"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content">

    <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="2dp"
        android:background="#eeeeee"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:fontFamily="@font/urbanist_regular"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/or"/>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:background="#eeeeee"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_green"
        android:layout_margin="20dp"
        android:text="@string/sign_in_with_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_regular"
        android:textStyle="bold"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/urbanist_regular"
        android:textStyle="bold"/>


</androidx.appcompat.widget.LinearLayoutCompat>